--- a/pages/sumate.html
+++ b/pages/sumate.html
@@ -16,6 +16,7 @@
                     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
                     <link rel="shortcut icon" href="../icons/loto.ico" type="image/x-icon">
                     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+                    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
                     <link rel="stylesheet" href="../css/style.css">
             <title>Sumate</title>
         </head>
@@ -27,12 +28,12 @@
                         <button class="navbar-toggler ml-2" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
-                        <picture class="navBar__logo">
+                        <picture class="navBar__logo" data-aos="fade-right">
                             <img class="navBar__logo--img" src="../images/logo-03.png" alt="ANAN7A Multiespacio">
                         </picture>
                     </div>
                     <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav">
+                        <ul class="navbar-nav" data-aos="flip-down">
                             <li class="nav-item"><a class="nav-link active" href="../index.html">LA CASA</a></li>
                             <li class="nav-item"><a class="nav-link" href="actividades.html">ACTIVIDADES</a></li>
                             <li class="nav-item"><a class="nav-link" href="agenda.html">AGENDA</a></li>
@@ -95,5 +96,9 @@
             <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
             <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
             <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+            <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+            <script>
+                AOS.init();
+            </script>
     </body>
 </html>
